--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,30 @@
   "name": "uploadfiletoaws",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "clean": "rimraf dist/*",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "tsc": "tsc",
+    "build": "npm-run-all clean lint tsc copy-assets",
+    "dev:start": "npm-run-all build start",
     "copy-assets": "ts-node tools/copyAssets",
     "start": "node .",
-    "dev": "nodemon --watch src -e ts,ejs --exec npm run start",
+    "dev:npm-run-all": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.33.0",
+    "@aws-sdk/client-sts": "^3.32.0",
+    "@aws-sdk/credential-provider-node": "^3.32.0",
+    "@aws-sdk/credential-providers": "^3.32.0",
     "async": "^3.2.1",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "lodash": "^4.17.21"
   },
@@ -26,6 +38,8 @@
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.3"
   }
 }
