--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "@types/lodash": "^4.14.173",
     "@types/node": "^16.9.2",
     "@types/shelljs": "^0.8.9",
+    "madge": "^5.0.1",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4",
